[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/fonts/DNPixel-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://entities/Water.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 90
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 3 )]

[node name="CameraRig" type="Position2D" parent="."]

[node name="Camera" type="Camera2D" parent="CameraRig"]
offset = Vector2( 960, 540 )
current = true

[node name="UI" type="Control" parent="CameraRig"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CameraRig/UI"]
margin_right = 1920.0
margin_bottom = 300.0
theme = SubResource( 2 )
text = "Submersea"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="CameraRig/UI"]
margin_left = 910.0
margin_top = 400.0
margin_right = 1010.0
margin_bottom = 450.0
focus_mode = 0
theme = SubResource( 4 )
custom_colors/font_color_hover = Color( 0.898039, 0.901961, 0.470588, 1 )
custom_colors/font_color_pressed = Color( 0.54902, 1, 0.47451, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="CameraRig/UI/Play" to="." method="_on_Play_button_up"]
